assessments/coursework1/src/log/build_2024-11-10_11-51-27/cooing_code_pkg/stderr.log
  File "/home/delewlew/assessments/coursework1/src/install/cooing_code_pkg/lib/python3.10/site-packages/cooing_code_pkg/cooing_code_node.py", line 3
    from cooing_code_interfaces.msg import WheelVelocities.msg, TaskSpacePose.msg
                                                          ^
SyntaxError: invalid syntax

